Remove some limitations

--- a/safepoint-analyzer-web/src/main/resources/templates/upload.html
+++ b/safepoint-analyzer-web/src/main/resources/templates/upload.html
@@ -41,9 +41,7 @@
                 </li>
                 <li><span>For JDK 11+ decorators: level,tags,time,uptime are needed, check sample Xlog configuration below.</span>
                 </li>
-                <li>Max 1 file in compressed archive (will analyze first if there are many).</li>
-                <li>UI is ugly.</li>
-                <li>UI is optimized for Full HD resolution.</li>
+                <li>You can add many log files in one zip/7z archive. The files will be ordered by first line timestamp.</li>
                 <li>There is no exception handling at all :)</li>
             </ul>
             <div class="text-center">
