Better files reading (#23)
* Better files reading

* Improge errors handling

* Make LogsSource AutoCloseable

* Fix rendering summary table in standalone

* Improve displaying files overview

* Minor function name change

* Fix for tables with 1-2 rows

Co-authored-by: Artur Owczarek <a.owczarek@adform.com>
Co-authored-by: Ślusarski Krzysztof <krzysztof.slusarski@generali.com>

--- a/web-commons/src/main/resources/templates/waiting-for-results.html
+++ b/web-commons/src/main/resources/templates/waiting-for-results.html
@@ -25,7 +25,7 @@
                     <span th:utext="${initialStatus.parsingId}"></span></h6>
                 <p class="card-text">You will be redirected automatically upon completion. You can also copy address of
                     this page and visit it later.</p>
-                <p class="card-text" id="currentStatus">Already processed 0 lines</p>
+                <p class="card-text" id="currentStatus">Waiting for worker...</p>
             </div>
         </div>
     </div>
@@ -36,6 +36,14 @@
         askForStatus();
         const keepQuerying = setInterval(askForStatus, 1000);
 
+        function setCurrentStatus(innerHtml) {
+            document.getElementById("currentStatus").innerHTML = innerHtml;
+        }
+
+        function setErrorStatus() {
+            setCurrentStatus(`<div class="alert alert-danger" role="alert">Something really bad happened. Mail us at <a href="mailto:ks@gclogs.com">ks@gclogs.com</a> to help us make this tool better.</div>`);
+        }
+
         function askForStatus() {
             axios.get(`/parsings/${parsingId}/status`, {})
                 .then(function (response) {
@@ -44,13 +52,22 @@
                         clearInterval(keepQuerying);
                         window.location.href = `/parsings/${parsingId}`;
                     } else {
-                        const processedFormatted = responseData.processedLines.toLocaleString();
-                        document.getElementById("currentStatus").innerHTML = `Already processed ${processedFormatted} lines`;
+                        const failed = responseData.failed;
+                        if (!failed) {
+                            const processedFormatted = responseData.processedLines.toLocaleString();
+                            const currentFileNumber = responseData.currentFileNumber;
+                            const totalNumberOfFiles = responseData.totalNumberOfFiles;
+                            const linesPerSecond = responseData.linesPerSecond.toLocaleString();
+                            setCurrentStatus(`Reading file ${currentFileNumber} of ${totalNumberOfFiles}. Already processed ${processedFormatted} lines (average speed: ${linesPerSecond} lines per second)`);
+                        } else {
+                            clearInterval(keepQuerying);
+                            setErrorStatus();
+                        }
                     }
                 })
                 .catch(function (error) {
                     console.error(error);
-                    document.getElementById("currentStatus").innerHTML = `<div class="alert alert-danger" role="alert">Something really bad happened. Mail us at <a href="mailto:ks@gclogs.com">ks@gclogs.com</a> to help us make this tool better.</div>`;
+                    setErrorStatus();
                 });
         }
     });
