--- a/safepoint-analyzer-web/src/main/resources/templates/upload.html
+++ b/safepoint-analyzer-web/src/main/resources/templates/upload.html
@@ -130,7 +130,8 @@
                 </div>
                 <div id="collapse1" class="collapse">
                     <div class="card-body">
-                        <pre><code>-Xlog:codecache+sweep*=trace,
+                        <pre><code>-Xlog:codecache=info,
+codecache+sweep*=trace,
 class+unload,
 class+load,
 os+thread,
@@ -197,7 +198,7 @@ gc+humongous=trace
             <pre><code>sudo -u JVM_USER jcmd `pgrep -x java` VM.log
 output="file=/PATH/TO/gc.log"
 output_options="filesize=104857600,filecount=5"
-what="codecache+sweep*=trace,class+unload,class+load,os+thread,safepoint,gc*,gc+stringdedup=debug,gc+ergo=trace,gc+age=trace,gc+phases=trace,gc+humongous=trace,jit+compilation=debug"
+what="codecache=info,codecache+sweep*=trace,class+unload,class+load,os+thread,safepoint,gc*,gc+stringdedup=debug,gc+ergo=trace,gc+age=trace,gc+phases=trace,gc+humongous=trace,jit+compilation=debug"
 decorators="level,tags,time,uptime,pid</code></pre>
         </div>
     </div>
